--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <h3>Calculando Basico</h3>
-        <p id="horasTrabajadas"></p>
-        <p id="basicoCalcular"></p>
-        <input type="button" id="btnEjecutar" value="calcular">
-    </section>
-    <script src="./js/funcion.js"></script>
+    <h1>Ejemplo 01: Buscar cadenas</h1>
+    <p id="resultado"></p>
+
+    <h1>Ejemplo 02: comparar cadenas</h1>
+    <input type="text" id="txtUsuario">
+    <input type="button" value="Enviar" id="btnEnviar">
+    <p id="resultado2"></p>
+
+    <h1>Ejemplo 03: cortar cadenas</h1>
+    <input type="text" id="txtCadena">
+    <input type="button" value="Enviar" id="btnCortar">
+    <p id="resultado3"></p>
+
+    <h1>Ejemplo 04: Array</h1>
+    <input type="button" value="Enviar" id="btnArray">
+    <p id="resultado4"></p>
+
+    <h1>Ejemplo 05: Funcion de suma</h1>
+    <!-- <input type="text" id="numero1" placeholder="">
+    <input type="text" id="numero2"> -->
+    <input type="button" value="Enviar" id="btnSuma">
+    <p id="resultado5"></p>
 </body>
 </html>
+<script src="./js/funciones2.js"></script>
+<script src="./js/libreria.js"></script>
