--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <nav>
         <ul class="menu">
           <li class="logo"><a href="index.html">Indice principal</a></li>
-          <li class="logo"><a href="#">Home</a></li>
-          <li class="logo"><a href="#">About</a></li>
-          <li class="logo"><a href="#">Services</a></li>
-          <li class="logo"><a href="#">Features</a></li>
-          <li class="logo"><a href="#">Blog</a></li>
-          <li class="logo"><a href="#">Contact</a></li>
+          <li class="logo"><a href="ejercicio1.html">Ejercicio1</a></li>
+          <li class="logo"><a href="ejercicio2.html">Ejercicio2</a></li>
+          <li class="logo"><a href="ejercicioPrincipal.html">ejercicioPrincipal</a></li>
+          <li class="logo"><a href="proyectoPrincipal">proyectoBasico</a></li>
       </nav>
 </body>
 </html>
