--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enlaces para los cursos</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
     <nav>
         <ul class="menu">
-          <li class="logo"><a href="index.html">Indice principal</a></li>
           <li class="logo"><a href="ejercicio1.html">Ejercicio1</a></li>
           <li class="logo"><a href="ejercicio2.html">Ejercicio2</a></li>
           <li class="logo"><a href="ejercicioPrincipal.html">ejercicioPrincipal</a></li>
